RESOLVED FIXED237021
http/wpt/mediarecorder/mute-tracks.html fails with WebRTCRemoteVideoFrameEnabled=true
https://bugs.webkit.org/show_bug.cgi?id=237021
Summary http/wpt/mediarecorder/mute-tracks.html fails with WebRTCRemoteVideoFrameEnab...
youenn fablet
Reported 2022-02-22 00:00:22 PST
http/wpt/mediarecorder/mute-tracks.html fails with WebRTCRemoteVideoFrameEnabled=true
Attachments
Patch (5.41 KB, patch)
2022-02-22 00:06 PST, youenn fablet
no flags
youenn fablet
Comment 1 2022-02-22 00:06:50 PST
Kimmo Kinnunen
Comment 2 2022-02-22 01:27:33 PST
Comment on attachment 452833 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=452833&action=review > Source/WebKit/WebProcess/GPU/webrtc/MediaRecorderPrivate.cpp:99 > // FIXME: We could optimize sending black frames by only sending width/height. I think it'd be the time to address the fixme. Sending dummy pixels of possibly invalid size..
youenn fablet
Comment 3 2022-02-22 01:38:58 PST
(In reply to Kimmo Kinnunen from comment #2) > Comment on attachment 452833 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=452833&action=review > > > Source/WebKit/WebProcess/GPU/webrtc/MediaRecorderPrivate.cpp:99 > > // FIXME: We could optimize sending black frames by only sending width/height. > > I think it'd be the time to address the fixme. Sending dummy pixels of > possibly invalid size.. Yes, I have a local patch that does that through a new SharedVideoFrame that will replace RemoteVideoSample. As of the size, when the track is muted, the spec is very light on whether we should respect the size of the frame or not. Currently, we stick to using the same size over and over, which is probably the safest option.
EWS
Comment 4 2022-02-22 08:06:55 PST
Committed r290307 (247630@main): <https://commits.webkit.org/247630@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452833 [details].
Radar WebKit Bug Importer
Comment 5 2022-02-22 08:07:30 PST
Note You need to log in before you can comment on or make changes to this bug.