http/wpt/mediarecorder/mute-tracks.html fails with WebRTCRemoteVideoFrameEnabled=true https://bugs.webkit.org/show_bug.cgi?id=237021

Reviewed by Kimmo Kinnunen.

Source/WebKit:

We were previously creating the black frame but still sending the remote read reference.
On GPUProcess side, we were then encoding the real frame instead of the black/muted frame.
Add a specific muted code path to fix the issue.

Covered by updated test.

* WebProcess/GPU/webrtc/MediaRecorderPrivate.cpp:
(WebKit::MediaRecorderPrivate::videoSampleAvailable):
* WebProcess/GPU/webrtc/SharedVideoFrame.cpp:
(WebKit::SharedVideoFrameReader::read):

LayoutTests:

* http/wpt/mediarecorder/mute-tracks.html:



Canonical link: https://commits.webkit.org/247630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290307 268f45cc-cd09-0410-ab3c-d52691b4dbfc